--- a/home/.config/waybar/style.css
+++ b/home/.config/waybar/style.css
@@ -6,7 +6,6 @@
     min-height: 0;
 }
 
-
 window#waybar {
     background: rgba(43, 48, 59, 0.5);
     border-bottom: 3px solid rgba(100, 114, 125, 0.5);
@@ -42,7 +41,7 @@ window#waybar.hidden {
     border-bottom: 3px solid #ffffff;
 }
 
-#clock, #battery, #cpu, #memory, #temperature, #backlight, #network, #pulseaudio, #custom-media, #tray, #mode, #idle_inhibitor {
+#clock, #battery, #cpu, #memory, #temperature, #backlight, #network, #pulseaudio, #tray, #mode, #idle_inhibitor {
     padding: 0 10px;
     margin: 0 3px;
 }
@@ -109,19 +108,6 @@ window#waybar.hidden {
     color: #2a5c45;
 }
 
-#custom-media {
-    background: #66cc99;
-    color: #2a5c45;
-}
-
-.custom-spotify {
-    background: #66cc99;
-}
-
-.custom-vlc {
-    background: #ffa000;
-}
-
 #temperature {
     background: #f0932b;
 }
@@ -141,4 +127,12 @@ window#waybar.hidden {
 #idle_inhibitor.activated {
     background-color: #ecf0f1;
     color: #2d3436;
+}
+
+#custom-notification {
+    padding: 0 5px 0 10px;
+    margin: 0 3px;
+
+    background: #66cc99;
+    color: #2a5c45;
 }
